--- a/hha504_assgn3.ipynb
+++ b/hha504_assgn3.ipynb
@@ -10,7 +10,7 @@
         "UyU2yq1vIdKn",
         "w2KlnVi1xENl"
       ],
-      "authorship_tag": "ABX9TyPj/Jy908KwMCVAq7K7k17f",
+      "authorship_tag": "ABX9TyPzkHc36sAG7P6/3kek1p3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5069,27 +5069,27 @@
     {
       "cell_type": "code",
       "source": [
-        "msq_database1 = pd.read_csv('/content/newdb_NewYorkPresbyterianHospital_standardcharges.csv')"
+        "nyp_db = pd.read_csv('/content/newdb_NewYorkPresbyterianHospital_standardcharges.csv')"
       ],
       "metadata": {
         "id": "WbVjk-v03eIQ"
       },
-      "execution_count": 180,
+      "execution_count": 183,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "msq_database1.to_sql('msq_database1', conn, if_exists='append', index=False)"
+        "nyp_db.to_sql('nyp_db', conn, if_exists='append', index=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rkti2bat3pir",
-        "outputId": "ed07ee0d-e775-4138-ff18-5f073e8ab52d"
+        "outputId": "b5dff0c8-10e1-4965-f03a-8017b05d71a1"
       },
-      "execution_count": 181,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5099,7 +5099,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 181
+          "execution_count": 184
         }
       ]
     },
@@ -5108,7 +5108,7 @@
       "source": [
         "query = '''\n",
         "select *\n",
-        " from msq_database1\n",
+        " from nyp_db\n",
         ";\n",
         " '''\n",
         "\n",
@@ -5121,9 +5121,9 @@
           "height": 1000
         },
         "id": "mt24bh-L4yy3",
-        "outputId": "68344169-c689-49ff-e58d-4b1e167cbb0c"
+        "outputId": "44cfa6f5-be71-4dd8-b601-546b4176f43b"
       },
-      "execution_count": 182,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5237,7 +5237,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7059f602-bacd-48f7-bcac-fb95400cf3fc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d0edcc14-52f4-47c7-a5b0-ad67a7646aa4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5551,7 +5551,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7059f602-bacd-48f7-bcac-fb95400cf3fc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d0edcc14-52f4-47c7-a5b0-ad67a7646aa4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5603,12 +5603,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7059f602-bacd-48f7-bcac-fb95400cf3fc button.colab-df-convert');\n",
+              "        document.querySelector('#df-d0edcc14-52f4-47c7-a5b0-ad67a7646aa4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7059f602-bacd-48f7-bcac-fb95400cf3fc');\n",
+              "        const element = document.querySelector('#df-d0edcc14-52f4-47c7-a5b0-ad67a7646aa4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5628,8 +5628,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-886255bf-3015-4bf0-a77a-c8fbefc9152f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-886255bf-3015-4bf0-a77a-c8fbefc9152f')\"\n",
+              "<div id=\"df-a90390a9-52c1-4b3e-8c7d-840bb3754010\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a90390a9-52c1-4b3e-8c7d-840bb3754010')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5748,7 +5748,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-886255bf-3015-4bf0-a77a-c8fbefc9152f button');\n",
+              "        document.querySelector('#df-a90390a9-52c1-4b3e-8c7d-840bb3754010 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -5759,7 +5759,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 182
+          "execution_count": 185
         }
       ]
     }
